--- a/Angular/projeto1/src/index.html
+++ b/Angular/projeto1/src/index.html
@@ -5,7 +5,7 @@
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
-  <meta name="description" content="luta contra a censura em tempos de guerra"/>
+  <meta name="description" content="Fight against censorship in times of war"/>
   <meta name="keywords" content="censura,guerra"/>
   <title>Nova Gas</title>
 </head>
